add create bug and bug table
