# backend/api/bug/get-organisation-teams-by-profile.go
@@ -7,13 +7,14 @@ import (
 	"github.com/go-chi/chi/v5"
 	"github.com/google/uuid"
 	"github.com/jackc/pgx/v5"
+	db "github.com/papaya147/buggy/backend/db/sqlc"
 	"github.com/papaya147/buggy/backend/token"
 	"github.com/papaya147/buggy/backend/util"
 )
 
-// getOrganisationTeams godoc
-// @Summary      Get organisations this profile can assign bugs to within an organsiation.
-// @Description  Get organisations this profile can assign bugs to within an organsiation.
+// getOrganisationTeamsByProfile godoc
+// @Summary      Get teams this profile is part of.
+// @Description  Get teams this profile is part of.
 // @Tags         bug
 // @Produce      json
 // @Param        organisation-id  path  string  true  "Organisation ID"
@@ -21,8 +22,8 @@ import (
 // @Failure      400  {object}  util.ErrorModel
 // @Failure      404  {object}  util.ErrorModel
 // @Failure      500  {object}  util.ErrorModel
-// @Router       /bug/organisation/{organisation-id}/teams [get]
-func (handler *Handler) getOrganisationTeams(w http.ResponseWriter, r *http.Request) {
+// @Router       /bug/organisation/{organisation-id}/teams-by-profile [get]
+func (handler *Handler) getOrganisationTeamsByProfile(w http.ResponseWriter, r *http.Request) {
 	payload, err := token.GetTokenDetail(r.Context(), token.AccessToken)
 	if err != nil {
 		util.NewErrorAndWrite(w, err)
@@ -37,32 +38,10 @@ func (handler *Handler) getOrganisationTeams(w http.ResponseWriter, r *http.Requ
 		return
 	}
 
-	orgId := uuid.MustParse(requestPayload.Id)
-
-	orgs, err := handler.store.GetAssignableOrganisations(r.Context(), payload.UserId)
-	if err != nil {
-		if errors.Is(err, pgx.ErrNoRows) {
-			util.NewErrorAndWrite(w, util.ErrEntityDoesNotExist)
-			return
-		}
-		util.NewErrorAndWrite(w, util.ErrDatabase)
-		return
-	}
-
-	validReq := false
-	for _, org := range orgs {
-		if org.ID == orgId {
-			validReq = true
-			break
-		}
-	}
-
-	if !validReq {
-		util.NewErrorAndWrite(w, util.ErrUnauthorised)
-		return
-	}
-
-	teams, err := handler.store.GetOrganisationTeams(r.Context(), orgId)
+	teams, err := handler.store.GetTeamsByProfileAndOrganisation(r.Context(), db.GetTeamsByProfileAndOrganisationParams{
+		Profile: payload.UserId,
+		ID:      uuid.MustParse(requestPayload.Id),
+	})
 	if err != nil {
 		if errors.Is(err, pgx.ErrNoRows) {
 			util.NewErrorAndWrite(w, util.ErrEntityDoesNotExist)
@@ -75,11 +54,9 @@ func (handler *Handler) getOrganisationTeams(w http.ResponseWriter, r *http.Requ
 	response := []teamOutput{}
 	for _, team := range teams {
 		response = append(response, teamOutput{
-			Id:          team.ID,
-			Name:        team.Name,
-			Description: team.Description,
-			CreatedAt:   team.Createdat.Unix(),
-			UpdatedAt:   team.Updatedat.Unix(),
+			Id:          team.Teamid,
+			Name:        team.Teamname,
+			Description: team.Teamdescription,
 		})
 	}
 
