# backend/api/bug/get.go
@@ -3,6 +3,7 @@ package bug
 import (
 	"errors"
 	"net/http"
+	"time"
 
 	"github.com/go-chi/chi/v5"
 	"github.com/google/uuid"
@@ -54,9 +55,15 @@ func (handler *Handler) get(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	closedBy, _ := uuid.FromBytes(bug.Closedby.Bytes[:])
-	remarks := bug.Remarks.String
-	closedAt := bug.Closedat.Time
+	var closedBy *uuid.UUID = nil
+	var remarks *string = nil
+	var closedAt *time.Time = nil
+	if bug.Closedby.Valid {
+		t, _ := uuid.FromBytes(bug.Closedby.Bytes[:])
+		closedBy = &t
+		remarks = &bug.Remarks.String
+		closedAt = &bug.Closedat.Time
+	}
 
 	util.WriteJson(w, http.StatusOK, bugOutput{
 		Id:                bug.ID,
@@ -70,8 +77,8 @@ func (handler *Handler) get(w http.ResponseWriter, r *http.Request) {
 		Completed:         bug.Completed,
 		Createdat:         bug.Createdat,
 		Updatedat:         bug.Updatedat,
-		Closedby:          &closedBy,
-		Remarks:           &remarks,
-		Closedat:          &closedAt,
+		Closedby:          closedBy,
+		Remarks:           remarks,
+		Closedat:          closedAt,
 	})
 }
