# backend/docs/swagger.json
@@ -154,14 +154,64 @@
         },
         "/bug/organisation/{organisation-id}/teams": {
             "get": {
-                "description": "Get organisations this profile is part of.",
+                "description": "Get organisations this profile can assign bugs to within an organsiation.",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "bug"
                 ],
-                "summary": "Get organisations this profile is part of.",
+                "summary": "Get organisations this profile can assign bugs to within an organsiation.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Organisation ID",
+                        "name": "organisation-id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/bug.teamOutput"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/util.ErrorModel"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/util.ErrorModel"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/util.ErrorModel"
+                        }
+                    }
+                }
+            }
+        },
+        "/bug/organisation/{organisation-id}/teams-by-profile": {
+            "get": {
+                "description": "Get teams this profile is part of.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "bug"
+                ],
+                "summary": "Get teams this profile is part of.",
                 "parameters": [
                     {
                         "type": "string",
@@ -1234,23 +1284,23 @@
         "bug.bugOutput": {
             "type": "object",
             "properties": {
-                "assignedbyprofile": {
+                "assigned_by_profile": {
                     "type": "string",
                     "example": "00000000-0000-0000-0000-000000000000"
                 },
-                "assignedbyteam": {
+                "assigned_by_team": {
                     "type": "string",
                     "example": "00000000-0000-0000-0000-000000000000"
                 },
-                "assignedto": {
+                "assigned_to": {
                     "type": "string",
                     "example": "00000000-0000-0000-0000-000000000000"
                 },
-                "closedat": {
+                "closed_at": {
                     "type": "string",
                     "example": "1710579130"
                 },
-                "closedby": {
+                "closed_by": {
                     "type": "string",
                     "example": "00000000-0000-0000-0000-000000000000"
                 },
@@ -1258,7 +1308,7 @@
                     "type": "boolean",
                     "example": false
                 },
-                "createdat": {
+                "created_at": {
                     "type": "string",
                     "example": "1710579130"
                 },
@@ -1294,7 +1344,7 @@
                     ],
                     "example": "PENDING"
                 },
-                "updatedat": {
+                "updated_at": {
                     "type": "string",
                     "example": "1710579130"
                 }
